--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "plugins": "^0.4.2",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
@@ -48,6 +49,6 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
     "react-router-dom": "^6.10.0",
-    "sass": "^1.62.0"
+    "sass": "^1.62.1"
   }
 }
