--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "uin23eksamen_gruppe7",
   "version": "0.1.0",
+  "homepage": "https://itstud.hiof.no/~arildea/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
